// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`It sould be invalid if input without email 1`] = `
<div>
  <input />
  <div>
    This is not a valid email address. Please check your email and try again.
  </div>
</div>
`;

exports[`It sould be valid if input email 1`] = `
<div>
  <input />
  <div />
</div>
`;

exports[`It sould be valid if input is empty 1`] = `
<div>
  <input />
  <div />
</div>
`;
